--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -10,6 +10,7 @@
     :root {
         /*=========font-size========*/
         --fs-xxl: 26px !important;
+        --fs-8xl: 24px !important;
     }
 
 }
