--- a/assets/css/style7.css
+++ b/assets/css/style7.css
@@ -1,90 +1,45 @@
-
-.benifit_card {
-  padding: 30px 10.5px 30px 10.5px;
-  height: 200px !important;
-  max-height: 100%;
-  max-width: 240px;
-}
-
-.benifit_gradient {
-  padding: 1px;
-  border-radius: 12px;
-
-  max-width: 240px;
-  transition: all 300ms linear;
-}
-
-.benifit_gradient:hover {
-  transform: scale(1.05);
-  border-radius: 12px;
-  max-width: 240px;
-  background: linear-gradient(171.68deg, #00ffe1 39.97%, #6e5df6 107.69%);
-}
-.mw_357 {
-  max-width: 357px;
-}
 .mobile_inner_part {
-  padding: 28px 3px;
-  max-width: 264px;
+  padding: 28px 8px;
+  max-width: 225px;
   top: 4%;
   left: 8%;
 }
-.mobile_wh {
-  width: 265px;
-  height: 505px;
-  max-width: 100%;
-}
-.mobile_trading {
-  border-radius: 5.87px;
-  max-width: 217px;
-  max-height: 208px;
-}
-@media (min-width: 576px) {
-  .mobile_trading {
-    max-width: 244px;
-    max-height: 224px;
-  }
 
+.mobile_back_ellp {
+  left: 2%;
+  top: 12%;
+  max-width: 310px;
+  height: 350px;
+}
+
+@media (min-width: 576px) {
   .mobile_inner_part {
     padding: 28px 14px;
   }
   .mobile_back_ellp {
-    left: 18% !important;
+    left: 25% !important;
     top: 16% !important;
     max-width: 361px !important;
     height: 321px !important;
   }
 }
 @media (min-width: 768px) {
-  .icons_card {
-    padding: 16px 14px 16px 14px;
-    margin-bottom: 10px;
+  .mobile_inner_part {
+    padding: 28px 3px;
+    max-width: 264px;
+    left: 10%;
   }
 
-  .mobile_wh {
-    width: 314px;
-    height: 614px;
-  }
   .mobile_back_ellp {
-    left: 18% !important;
-  }
-}
-@media (min-width: 992px) {
-  .accounts_card {
-    transform: translateY(-16%) !important;
-  }
-}
-@media (min-width: 1023.8px) {
-  .mobile_back_ellp {
-    left: 11% !important;
-    top: 16% !important;
+    left: 27% !important;
     max-width: 461px !important;
     height: 421px !important;
   }
 }
-.icons_card {
-  padding: 13px 11px 13px 11px;
-  background: #0b0e10;
-  border-radius: 4px;
-  margin-bottom: 15px;
+
+@media (min-width: 992px) {
+  .mobile_back_ellp {
+    left: 10.5% !important;
+    top: 16% !important;
+  }
 }
