--- a/assets/css/style7.css
+++ b/assets/css/style7.css
@@ -1,45 +1,49 @@
-.mobile_inner_part {
-  padding: 28px 8px;
-  max-width: 225px;
-  top: 4%;
-  left: 8%;
+.benefits_bubble {
+  width: 300px !important;
+  height: 300px !important;
+  position: absolute;
+  top: 55%;
+  transform: translateY(-50%);
+  z-index: 1;
 }
 
-.mobile_back_ellp {
-  left: 2%;
-  top: 12%;
-  max-width: 310px;
-  height: 350px;
+.benefits_bubble_bg {
+  border-radius: 70% 30% 73% 27% / 43% 32% 68% 57%;
+  animation: benefits_bubble_radious 7s linear infinite alternate;
+}
+.linear_bg {
+  background: linear-gradient(107.02deg, #00ffe1 12.76%, #6e5df6 91.81%);
 }
 
+.benefits_bubble_bg {
+  border-radius: 70% 30% 73% 27% / 43% 32% 68% 57%;
+  animation: benefits_bubble_radious 7s linear infinite alternate;
+}
+@keyframes benefits_bubble_radious {
+  25% {
+    border-radius: 48% 52% 18% 82% / 53% 46% 54% 47%;
+  }
+  50% {
+    border-radius: 20% 80% 18% 82% / 22% 31% 69% 78%;
+  }
+  75% {
+    border-radius: 20% 80% 73% 27% / 22% 59% 41% 78%;
+  }
+  100% {
+    border-radius: 70% 30% 73% 27% / 43% 59% 41% 57%;
+  }
+}
 @media (min-width: 576px) {
-  .mobile_inner_part {
-    padding: 28px 14px;
-  }
-  .mobile_back_ellp {
-    left: 25% !important;
-    top: 16% !important;
-    max-width: 361px !important;
-    height: 321px !important;
-  }
+    .benefits_bubble {
+        width: 361px !important;
+        height: 321px !important;
+      
+      }
 }
 @media (min-width: 768px) {
-  .mobile_inner_part {
-    padding: 28px 3px;
-    max-width: 264px;
-    left: 10%;
-  }
-
-  .mobile_back_ellp {
-    left: 27% !important;
-    max-width: 461px !important;
+  .benefits_bubble {
+    width: 461px !important;
     height: 421px !important;
-  }
-}
-
-@media (min-width: 992px) {
-  .mobile_back_ellp {
-    left: 10.5% !important;
-    top: 16% !important;
+ 
   }
 }
