--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1184,8 +1184,8 @@ body::-webkit-scrollbar-thumb {
 }
 
 .px-6 {
-    padding-left: 6px;
-    padding-right: 6px;
+    padding-left: 6px !important;
+    padding-right: 6px !important;
 }
 
 .px_6 {
@@ -1628,7 +1628,7 @@ numberinput-header .numberinput-header[type="number"] {
 }
 
 .gap-16 {
-    gap: 16px;
+    gap: 16px !important;
 }
 
 @media (max-width:1200px) {
@@ -2095,7 +2095,7 @@ numberinput-header .numberinput-header[type="number"] {
     }
 
     .gap_md_20 {
-        gap: 20px;
+        gap: 20px !important;
     }
 
     .mobile_back_ellp {
